# QuickCraft

./: .env.example  .gitignore  README.md  pyproject.toml  recap.txt  requirements.txt
.claude/: settings.local.json
myproject/: db.sqlite3
myproject/myapp/: urls.py  views.py
myproject/myproject/: settings.py  urls.py
myproject/static/: main.css  mainstyle.css  styles.css
myproject/templates/: QPMaker.html  aura.html  aura2.html  dashboard.html  generate_paper.html  index.html  login.html
requirements/: base.txt  dev.txt
